# NS2Driver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  日誌.md
installer/: configure_hidhide.ps1  install.ps1  ns2drv_setup.iss  prepare.bat  uninstall.ps1
reference/: protocol_notes.md
src/: main.cpp  ns2drv.rc
src/controller/: HidInitializer.cpp  HidInitializer.hpp  InputParser.cpp  InputParser.hpp  NS2Controller.cpp  NS2Controller.hpp  RumbleEncoder.cpp  RumbleEncoder.hpp
src/hid/: HidDevice.cpp  HidDevice.hpp  UsbDevice.cpp  UsbDevice.hpp
src/ui/: TrayIcon.cpp  TrayIcon.hpp
src/utils/: Config.cpp  Config.hpp  HidHideControl.cpp  HidHideControl.hpp  Logger.cpp  Logger.hpp
src/vigem/: RumbleCallback.cpp  RumbleCallback.hpp  VirtualController.cpp  VirtualController.hpp
